WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236786
ASSERTION FAILED: Thread::current().uid() == threadAssertion.m_uid for RemoteVideoFrameObjectHeap
https://bugs.webkit.org/show_bug.cgi?id=236786
Summary
ASSERTION FAILED: Thread::current().uid() == threadAssertion.m_uid for Remote...
Kimmo Kinnunen
Reported
2022-02-17 08:44:52 PST
ASSERTION FAILED: Thread::current().uid() == threadAssertion.m_uid for RemoteVideoFrameObjectHeap
Attachments
Patch
(1.55 KB, patch)
2022-02-17 08:46 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
[fast-cq] Patch
(1.55 KB, patch)
2022-02-17 08:50 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-02-17 08:46:32 PST
Created
attachment 452374
[details]
Patch
Kimmo Kinnunen
Comment 2
2022-02-17 08:50:20 PST
Created
attachment 452375
[details]
[fast-cq] Patch
EWS
Comment 3
2022-02-17 10:24:18 PST
Committed
r290034
(
247414@main
): <
https://commits.webkit.org/247414@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 452375
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-02-17 10:25:16 PST
<
rdar://problem/89095088
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug