ASSERTION FAILED: Thread::current().uid() == threadAssertion.m_uid for RemoteVideoFrameObjectHeap https://bugs.webkit.org/show_bug.cgi?id=236786

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-02-17
Reviewed by Antti Koivisto.

The object is ok to destroy from any thread.
Reset the thread assertion.

* GPUProcess/media/RemoteVideoFrameObjectHeap.cpp:
(WebKit::RemoteVideoFrameObjectHeap::~RemoteVideoFrameObjectHeap):


Canonical link: https://commits.webkit.org/247414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290034 268f45cc-cd09-0410-ab3c-d52691b4dbfc